fix(core): fix for GFI with java 8 time object